--- a/SecurePasswordAndroid/app/src/main/res/layout/activity_edit.xml
+++ b/SecurePasswordAndroid/app/src/main/res/layout/activity_edit.xml
@@ -1,190 +1,192 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="wzhkun.securepw.ui.android.EditActivity">
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="@string/app"
         android:id="@+id/textView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
         android:layout_alignTop="@+id/edit_app"
-        android:layout_alignParentStart="true" />
+        android:text="@string/app"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="@string/acount"
         android:id="@+id/textView7"
-        android:layout_below="@+id/edit_app"
-        android:layout_alignParentStart="true" />
-
-    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="@string/old_password"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/edit_app"
+        android:text="@string/acount"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    <TextView
         android:id="@+id/textView8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
         android:layout_below="@+id/edit_account"
-        android:layout_alignParentStart="true" />
+        android:text="@string/old_password"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="@string/password"
         android:id="@+id/textView9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
         android:layout_below="@+id/edit_old_password"
-        android:layout_alignParentStart="true" />
+        android:text="@string/password"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/edit_app"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_toEndOf="@+id/textView6"
-        android:layout_alignStart="@+id/edit_account" />
+        android:layout_alignStart="@+id/edit_account"
+        android:layout_toEndOf="@+id/textView6" />
 
     <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/edit_account"
-        android:layout_below="@+id/edit_app"
-        android:layout_alignParentEnd="true"
-        android:layout_alignStart="@+id/edit_old_password" />
-
-    <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/edit_old_password"
-        android:layout_below="@+id/edit_account"
         android:layout_alignParentEnd="true"
+        android:layout_alignStart="@+id/edit_old_password"
+        android:layout_below="@+id/edit_app" />
+
+    <EditText
+        android:id="@+id/edit_old_password"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/edit_account"
         android:layout_toEndOf="@+id/textView8" />
 
     <EditText
+        android:id="@+id/edit_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/edit_password"
-        android:layout_below="@+id/edit_old_password"
         android:layout_alignEnd="@+id/edit_old_password"
-        android:layout_alignStart="@+id/edit_old_password" />
+        android:layout_alignStart="@+id/edit_old_password"
+        android:layout_below="@+id/edit_old_password" />
 
     <Button
+        android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/confirm"
-        android:id="@+id/button"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
         android:layout_toStartOf="@+id/center"
-        android:onClick="confirm"/>
+        android:onClick="confirm"
+        android:text="@string/confirm" />
 
     <Button
+        android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/cancel"
-        android:id="@+id/button2"
         android:layout_alignBottom="@+id/button"
         android:layout_alignParentEnd="true"
         android:layout_toEndOf="@+id/center"
-        android:onClick="cancel"/>
+        android:onClick="cancel"
+        android:text="@string/cancel" />
 
     <Button
+        android:id="@+id/button3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/generate_password"
-        android:id="@+id/button3"
         android:layout_above="@+id/button"
-        android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:onClick="generate"/>
+        android:layout_alignParentStart="true"
+        android:onClick="generate"
+        android:text="@string/generate_password" />
 
     <TextView
+        android:id="@+id/textView10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="@string/length"
-        android:id="@+id/textView10"
+        android:layout_alignParentStart="true"
         android:layout_below="@+id/edit_password"
-        android:layout_alignParentStart="true" />
+        android:text="@string/length"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <EditText
+        android:id="@+id/edit_length"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="number"
-        android:ems="10"
-        android:id="@+id/edit_length"
-        android:layout_below="@+id/edit_password"
-        android:layout_alignStart="@+id/edit_password"
         android:layout_alignEnd="@+id/center"
+        android:layout_alignStart="@+id/edit_password"
+        android:layout_below="@+id/edit_password"
+        android:ems="10"
+        android:inputType="number"
         android:text="12" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text=" "
         android:id="@+id/center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_above="@+id/button3"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:text=" " />
 
     <CheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/uppercase"
         android:id="@+id/edit_upper_case"
-        android:layout_below="@+id/edit_length"
-        android:layout_alignParentStart="true"
-        android:checked="true" />
-
-    <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/number"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/edit_length"
+        android:checked="true"
+        android:text="@string/uppercase" />
+
+    <CheckBox
         android:id="@+id/edit_number"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/edit_length"
         android:layout_toEndOf="@+id/edit_length"
-        android:checked="true" />
+        android:checked="true"
+        android:text="@string/number" />
 
     <CheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/symbol"
         android:id="@+id/edit_symbol"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
         android:layout_below="@+id/edit_upper_case"
-        android:layout_alignParentStart="true"
-        android:checked="false" />
+        android:checked="false"
+        android:text="@string/symbol" />
 
     <CheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/first_char_letter"
         android:id="@+id/edit_first_char_letter"
-        android:layout_below="@+id/edit_number"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignStart="@+id/edit_number"
-        android:checked="true" />
+        android:layout_below="@+id/edit_number"
+        android:checked="true"
+        android:text="@string/first_char_letter" />
 
     <CheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/at_least_one_number"
         android:id="@+id/edit_at_least_one_number"
-        android:layout_below="@+id/edit_symbol"
-        android:layout_alignParentStart="true"
-        android:checked="true" />
-
-    <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/at_least_one_symbol"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/edit_symbol"
+        android:checked="true"
+        android:text="@string/at_least_one_number" />
+
+    <CheckBox
         android:id="@+id/edit_at_least_one_symbol"
-        android:layout_below="@+id/edit_first_char_letter"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignStart="@+id/edit_first_char_letter"
-        android:checked="false" />
+        android:layout_below="@+id/edit_first_char_letter"
+        android:checked="false"
+        android:text="@string/at_least_one_symbol" />
 
 </RelativeLayout>
