--- a/SecurePasswordAndroid/app/src/main/res/layout/activity_login.xml
+++ b/SecurePasswordAndroid/app/src/main/res/layout/activity_login.xml
@@ -1,44 +1,47 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
+    tools:context=".MainActivity">
 
     <EditText
+        android:id="@+id/login_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="textPassword"
-        android:ems="10"
-        android:id="@+id/login_password"
+        android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+        android:ems="10"
+        android:inputType="textPassword" />
 
     <Button
+        android:id="@+id/login_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/login"
-        android:id="@+id/login_login"
         android:layout_below="@+id/login_password"
         android:layout_centerHorizontal="true"
-        android:onClick="login"/>
+        android:onClick="login"
+        android:text="@string/login" />
 
     <Button
+        android:id="@+id/login_reset"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/reset"
-        android:id="@+id/login_reset"
         android:layout_below="@+id/login_login"
         android:layout_centerHorizontal="true"
-        android:onClick="reset"/>
+        android:onClick="reset"
+        android:text="@string/reset" />
 
     <TextView
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="@string/login_guide"
-        android:id="@+id/textView"
         android:layout_above="@+id/login_password"
         android:layout_centerHorizontal="true"
-        android:autoText="false" />
+        android:autoText="false"
+        android:text="@string/login_guide"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 </RelativeLayout>
