--- a/SecurePasswordAndroid/app/src/main/res/layout/activity_main.xml
+++ b/SecurePasswordAndroid/app/src/main/res/layout/activity_main.xml
@@ -1,40 +1,42 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="wzhkun.securepw.ui.android.MainActivity">
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="="
         android:id="@+id/main_setting"
-        android:onClick="setting"/>
-
-    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="+"
+        android:onClick="setting"
+        android:text="=" />
+
+    <Button
         android:id="@+id/main_add"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:onClick="add"/>
-
-    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/sync"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:onClick="add"
+        android:text="+" />
+
+    <Button
         android:id="@+id/main_sync"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_toStartOf="@+id/main_add"
-        android:onClick="sync"/>
+        android:onClick="sync"
+        android:text="@string/sync" />
 
     <FrameLayout
+        android:id="@+id/main_stack_view"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:id="@+id/main_stack_view"
         android:layout_below="@+id/main_setting"
         android:layout_centerHorizontal="true" />
 </RelativeLayout>
