--- a/SecurePasswordAndroid/app/src/main/res/layout/activity_reset.xml
+++ b/SecurePasswordAndroid/app/src/main/res/layout/activity_reset.xml
@@ -1,43 +1,46 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context="wzhkun.securepw.ui.android.ResetActivity">
+    tools:context="wzhkun.securepw.ui.android.ResetActivity">
 
     <EditText
+        android:id="@+id/reset_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="textPassword"
-        android:ems="10"
-        android:id="@+id/reset_password"
+        android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+        android:ems="10"
+        android:inputType="textPassword" />
 
     <Button
+        android:id="@+id/reset_reset"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/reset"
-        android:id="@+id/reset_reset"
         android:layout_below="@+id/reset_password"
         android:layout_centerHorizontal="true"
-        android:onClick="reset"/>
+        android:onClick="reset"
+        android:text="@string/reset" />
 
     <Button
+        android:id="@+id/cancel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/cancel"
-        android:id="@+id/cancel"
         android:layout_below="@+id/reset_reset"
         android:layout_centerHorizontal="true"
-        android:onClick="cancel"/>
+        android:onClick="cancel"
+        android:text="@string/cancel" />
 
     <TextView
+        android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="@string/reset_guide"
-        android:id="@+id/textView2"
         android:layout_above="@+id/reset_password"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:text="@string/reset_guide"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 </RelativeLayout>
